# LLMBrain

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SKILLS.md  docker-compose.yml  flake.nix  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_issue.yml  feature_request.yml  provider_request.yml  security_hardening.yml
.github/workflows/: ci.yml  lint.yml  package.yml  release.yml
app/: main.py
app/core/: config.py
app/formats/: brainframe.py  graphml.py  mdx.py
app/llm/: base.py
app/models/: document.py  entity.py  graph.py  llm.py  wiki.py
app/services/: chunker.py  context_builder.py  entity_extractor.py  fact_extractor.py  graph_generator.py  project_service.py  relation_extractor.py  scanner.py  wiki_generator.py
app/storage/: filesystem.py  jsonl.py  sqlite.py
docs/: AGENT_CONFIGURATION.md  AGENT_DELEGATION.md  AGENT_REFERENCE.md  SECURITY_VALIDATION.md  TEST_INVENTORY.md  VALIDATION_MATRIX.md  architecture.md  brainframe.md  ci-cd.md  llm-providers.md  output-formats.md  releasing.md  security-model.md
examples/github-actions/: llmbrain.yml
examples/sample-project/: .env.example  README.md
llmbrain/: __main__.py  cli.py  main.py  tui.py
llmbrain/agent/: agents.py  context.py  memory.py  runtime.py  safety.py  tools.py
llmbrain/app/: tui.py
llmbrain/core/: config.py  identity.py  lock.py  queue.py  (+1 more)
prompts/: ask.md  build.md  common.md  debug.md  plan.md  review.md  security.md  test.md
tests/: test_agent_runtime.py  test_agent_workflows.py  test_api_endpoints.py  test_benchmark.py  test_brainframe.py  test_build_command.py  test_chunker.py  test_ci_command.py  test_cli_help.py  test_cli_version.py  test_concurrency.py  test_evidence_health.py  test_incremental_build.py  test_open_source_files.py  test_package_import.py  test_parallel_cache.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_production_tools.py  test_python_module_entrypoint.py  test_redactor.py  test_sample_project_build.py  test_scanner.py  test_token_budget.py
(+65 files in other folders)
